--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -5,8 +5,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(0, 0, 0, 0);
+  background-color: #fffefe;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -17,11 +17,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #4caf50;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #4caf50;
 }
 
 body {
@@ -60,7 +60,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #4caf50;
 }
 button:focus,
 button:focus-visible {
@@ -69,11 +69,10 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #4caf50;
   }
   button {
     background-color: #f9f9f9;
